# Open-RNb

./: .gitignore  README.md  launch.py  pyproject.toml  requirements.txt  run_all.sh  train.sh
configs/: idr.yaml  nerf-blender.yaml  neus-blender copy.yaml  rnb.yaml  sfm.yaml
datasets/: __init__.py  blendercues.py  idr.py  rnb.py  sfm.py  utils.py
docs/: install.md
models/: geometry.py  neus.py  ray_utils.py  texture.py  utils.py
runs/neus-blender-buddha_sdm/nocues_100views@20250710-135331/: events.out.tfevents.1752148414.robin-dqbm.29719.0
runs/neus-blender-buddha_sdm/nocues_100views@20250710-135533/: events.out.tfevents.1752148536.robin-dqbm.30060.0
runs/neus-blender-buddha_sdm/nocues_100views@20250710-135609/: events.out.tfevents.1752148573.robin-dqbm.30347.0
runs/neus-blender-buddha_sdm/nocues_100views@20250710-135837/: events.out.tfevents.1752148720.robin-dqbm.31023.0
runs/neus-blender-buddha_sdm/nocues_100views@20250710-140917/: events.out.tfevents.1752149361.robin-dqbm.35307.0
runs/neus-blender-buddha_sdm/nocues_100views@20250710-141220/: events.out.tfevents.1752149544.robin-dqbm.37808.0
runs/neus-blender-buddha_sdm/nocues_100views@20250710-141325/: events.out.tfevents.1752149609.robin-dqbm.38690.0
scripts/: debug_albedo_scaling.py  debug_normalization.py  run_both_and_meshlab.sh  run_quick_test.sh
systems/: base.py  nerf.py  neus.py  utils.py
tests/: conftest.py  test_datasets_utils.py  test_idr_dataset.py  test_rnb_dataset.py  test_sfm_dataset.py  test_visualize_cameras.py
utils/: albedo_scaling.py  callbacks.py
(+173 files in other folders)
